--- a/package.json
+++ b/package.json
@@ -12,25 +12,18 @@
     "lint:no-fix": "eslint . --ext .js,.ts,.vue --max-warnings 0",
     "prettier": "prettier --check \"src/**/*.{js,ts,vue}\"",
     "prettier:write": "yarn prettier --write",
-    "check-manifest": "yarn build:prod && yarn web-ext --config=.web-ext.config.js lint && yarn build:chrome:prod && yarn web-ext --config=.web-ext.config.js lint",
+    "check-manifest": "yarn build --mode prod && yarn web-ext --config=.web-ext.config.js lint && yarn build --mode prod --for chrome && yarn web-ext --config=.web-ext.config.js lint",
     "package": "node scripts/package.js",
-    "package:dry": "cross-env DRY_RUN=true yarn package",
+    "package:dry": "DRY_RUN=true yarn package",
     "staged-zip": "mkdir -p artifacts; rm -f artifacts/staged.zip && cd dist && zip -r ../artifacts/staged.zip * ; cd ..",
-    "build": "cross-env BUILD_ONLY=true BUILD_FOR=firefox NODE_ENV=development webpack --watch",
-    "build:prod": "cross-env BUILD_ONLY=true BUILD_FOR=firefox NODE_ENV=production webpack",
-    "build:staged": "yarn build:prod && yarn staged-zip",
-    "build:chrome": "cross-env BUILD_ONLY=true BUILD_FOR=chrome NODE_ENV=development webpack --watch",
-    "build:chrome:prod": "cross-env BUILD_ONLY=true BUILD_FOR=chrome NODE_ENV=production webpack",
-    "build:chrome:staged": "yarn build:prod && yarn staged-zip",
-    "start": "cross-env HMR=true BUILD_FOR=firefox NODE_ENV=development webpack --watch",
-    "start:prod": "cross-env BUILD_FOR=firefox NODE_ENV=production webpack",
-    "start:chrome": "cross-env HMR=true BUILD_FOR=chrome NODE_ENV=development webpack --watch",
-    "start:chrome:prod": "cross-env BUILD_FOR=chrome NODE_ENV=production webpack",
+    "build": "./webpack.js --build",
+    "build:firefox-staged": "yarn build --mode staged && yarn staged-zip",
+    "build:chrome-staged": "yarn build --mode staged --for chrome && yarn staged-zip",
+    "start": "./webpack.js",
     "test": "jest --runInBand",
     "test:watch": "yarn test --watchAll",
-    "test:integration": "echo 'TODO'",
     "test:e2e": "echo 'TODO'",
-    "webpack-profile": "cross-env BUILD_ONLY=true BUILD_FOR=firefox NODE_ENV=production webpack --profile --json > stats.json && echo 'Upload ./stats.json to https://alexkuz.github.io/webpack-chart/'"
+    "webpack-profile": "./webpack.js --profile > stats.json && echo 'Upload ./stats.json to https://alexkuz.github.io/webpack-chart/'"
   },
   "husky": {
     "hooks": {
@@ -54,6 +47,7 @@
     "@types/fs-extra": "^9.0.2",
     "@types/jest": "^26.0.7",
     "@types/md5": "^2.1.33",
+    "@types/yargs": "^16.0.1",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/compiler-sfc": "^3.0.5",
@@ -64,7 +58,6 @@
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^5.1.1",
     "core-js": "^3.0.1",
-    "cross-env": "^5.2.0",
     "css-loader": "^3.4.0",
     "dotenv": "^8.2.0",
     "ejs": "^2.6.1",
@@ -96,6 +89,7 @@
     "tailwindcss": "^2.0.3",
     "ts-jest": "^26.1.4",
     "ts-loader": "^8.0.17",
+    "ts-node": "^9.1.1",
     "typescript": "^4.2.3",
     "vue-loader": "^16.1.2",
     "vue-tsc": "^0.0.14",
@@ -105,6 +99,7 @@
     "webpack-cli": "^4.5.0",
     "webpack-extension-reloader": "^1.1.4",
     "webpack-shell-plugin-next": "^2.1.1",
+    "yargs": "^16.2.0",
     "zip-a-folder": "^0.0.12"
   }
 }
