--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,8 +2,9 @@
   "name": "Anime Skip Player",
   "description": "Skip intros, credits, filler and more on supported services",
   "manifest_version": 2,
-  "permissions": ["storage", "tabs"],
-  "{{chrome}}.browser_action": {
+  "permissions": ["storage", "tabs", "{{chrome}}.declarativeContent"],
+  "page_action": {
+    "{{firefox}}.show_matches": ["https://www.anime-skip.com/*", "https://anime-skip.com/*"],
     "browser_style": false,
     "default_icon": {
       "16": "assets/extension-logo/16.png",
@@ -11,20 +12,8 @@
       "48": "assets/extension-logo/48.png",
       "128": "assets/extension-logo/128.png"
     },
-    "default_title": "Anime Skip",
-    "default_popup": "popup/index.html"
-  },
-  "{{firefox}}.page_action": {
-    "show_matches": ["https://www.anime-skip.com/*", "https://anime-skip.com/*"],
-    "browser_style": false,
-    "default_icon": {
-      "16": "assets/extension-logo/16.png",
-      "32": "assets/extension-logo/32.png",
-      "48": "assets/extension-logo/48.png",
-      "128": "assets/extension-logo/128.png"
-    },
-    "default_title": "Anime Skip",
-    "default_popup": "popup/index.html"
+    "default_title": "Anime Skip Player",
+    "{{firefox}}.default_popup": "popup/index.html"
   },
   "options_ui": {
     "page": "options/index.html",
