--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,6 +3,7 @@
   "description": "Skip intros, credits, filler and more on supported services",
   "manifest_version": 2,
   "permissions": ["storage", "tabs", "{{chrome}}.declarativeContent"],
+  "{{chrome}}.host_permissions": ["https://www.anime-skip.com/*", "https://anime-skip.com/*"],
   "page_action": {
     "{{firefox}}.show_matches": ["https://www.anime-skip.com/*", "https://anime-skip.com/*"],
     "browser_style": false,
@@ -13,7 +14,7 @@
       "128": "assets/extension-logo/128.png"
     },
     "default_title": "Anime Skip Player",
-    "{{firefox}}.default_popup": "popup/index.html"
+    "default_popup": "popup/index.html"
   },
   "options_ui": {
     "page": "options/index.html",
