chore: point staged builds to the staged api

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -6,12 +6,14 @@
     "storage",
     "tabs",
     "{{chrome}}.declarativeContent",
-    "{{firefox}}.*://api.anime-skip.com/*"
+    "{{firefox}}.*://api.anime-skip.com/*",
+    "{{firefox}}.*://staged.api.anime-skip.com/*"
   ],
   "{{chrome}}.host_permissions": [
     "https://www.anime-skip.com/*",
     "https://anime-skip.com/*",
-    "https://api.anime-skip.com/*"
+    "https://api.anime-skip.com/*",
+    "https://staged.api.anime-skip.com/*"
   ],
   "page_action": {
     "{{firefox}}.show_matches": ["https://www.anime-skip.com/*", "https://anime-skip.com/*"],
