--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "build:staged:chrome": "ts-node vite.build.ts --mode staged --for chrome"
   },
   "dependencies": {
+    "@anime-skip/axios-api": "^2.3.2",
     "@anime-skip/ui": "^1.2.1",
     "axios": "^0.21.1",
     "fuzzysort": "^1.1.4",
@@ -42,6 +43,7 @@
     "vue": "^3.2.2",
     "vue-demi": "^0.11.2",
     "vue-router": "^4.0.11",
+    "vue-use-request-state": "^0.1.0",
     "vuex": "^4.0.2",
     "webext-bridge": "^4.0.1",
     "webextension-polyfill-ts": "0.26.0"
