--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "vue": "^3.2.2",
     "vue-demi": "^0.11.2",
     "vue-router": "^4.0.11",
-    "vue-use-request-state": "^0.1.0",
+    "vue-use-request-state": "^0.2.1",
     "vuex": "^4.0.2",
     "webext-bridge": "^4.0.1",
     "webextension-polyfill-ts": "0.26.0"
@@ -74,6 +74,7 @@
     "dotenv": "^10.0.0",
     "download": "8.0.0",
     "eslint": "^7.32.0",
+    "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-only-warn": "^1.0.3",
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-vue": "^7.16.0",
