selecting suggestions works (anime skip and third party), fixed keyboard shortcuts, volume slider working, login overlay delay

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
     "resolveJsonModule": true,
     "strictNullChecks": true,
     "forceConsistentCasingInFileNames": true,
-    "types": ["vite/client", "mocha"],
+    "types": ["vite/client", "jest"],
     "paths": {
       "~/*": ["src/*"]
     }
