--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "build:staged:chrome": "ts-node vite.build.ts --mode staged --for chrome"
   },
   "dependencies": {
-    "@anime-skip/axios-api": "^2.3.2",
     "@anime-skip/ui": "^1.2.1",
     "axios": "^0.21.1",
     "axios-auth-refresh": "^3.1.0",
@@ -51,15 +50,16 @@
     "webextension-polyfill-ts": "0.26.0"
   },
   "devDependencies": {
+    "@anime-skip/axios-api": "^2.3.3",
     "@antfu/eslint-config": "^0.7.0",
     "@iconify/json": "^1.1.386",
     "@tailwindcss/line-clamp": "^0.2.1",
     "@types/argparse": "^2.0.10",
     "@types/download": "8.0.0",
     "@types/fs-extra": "^9.0.12",
+    "@types/jest": "^27.0.1",
     "@types/lodash.isequal": "^4.5.5",
     "@types/md5": "^2.3.1",
-    "@types/mocha": "^9.0.0",
     "@types/node": "^16.6.0",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
@@ -81,12 +81,11 @@
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-vue": "^7.16.0",
     "esno": "^0.8.0",
-    "expect": "^27.0.6",
     "express": "4.17.1",
     "fs-extra": "^10.0.0",
     "husky": "^7.0.1",
+    "jest": "^27.1.0",
     "kolorist": "^1.5.0",
-    "mocha": "^9.0.3",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.3.6",
     "prettier": "^2.3.2",
@@ -95,6 +94,7 @@
     "safe-compare": "1.1.4",
     "sass": "^1.38.0",
     "tailwindcss": "^2.2.7",
+    "ts-jest": "^27.0.5",
     "ts-node": "^10.2.0",
     "tsup": "^4.13.1",
     "typescript": "^4.3.5",
