--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@anime-skip/ui": "^1.2.1",
+    "async-mutex": "^0.3.2",
     "axios": "^0.21.1",
     "axios-auth-refresh": "^3.1.0",
     "fuzzysort": "^1.1.4",
