--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,8 @@
     "source.organizeImports": true
   },
   "files.associations": {
-    "*.css": "postcss"
+    "*.css": "postcss",
+    ".env.package": "dotenv"
   },
   "[vue]": {
     "editor.tabSize": 2,
@@ -77,5 +78,8 @@
     "**/CVS": true,
     "**/.DS_Store": true
     // "**/components.d.ts": true
+  },
+  "workbench.editorAssociations": {
+    ".env.package": "dotenv"
   }
 }
