--- a/.github/workflows/verify-pr.yml
+++ b/.github/workflows/verify-pr.yml
@@ -65,3 +65,9 @@ jobs:
         with:
           name: chrome-beta.zip
           path: artifacts/chrome-beta.zip
+
+      - name: Upload Sources ZIP
+        uses: actions/upload-artifact@v2
+        with:
+          name: sources.zip
+          path: artifacts/sources.zip
