feat: hover time and timestamp preview

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -76,8 +76,9 @@
     "**/.svn": true,
     "**/.hg": true,
     "**/CVS": true,
-    "**/.DS_Store": true
-    // "**/components.d.ts": true
+    "**/.DS_Store": true,
+    "**/components.d.ts": true,
+    ".old-webpack-extension/**/*": true
   },
   "workbench.editorAssociations": {
     ".env.package": "dotenv"
