--- a/.github/workflows/new-release.yml
+++ b/.github/workflows/new-release.yml
@@ -74,7 +74,9 @@ jobs:
 
       - name: Reset after no release
         if: ${{ steps.changelog.outputs.skipped == 'true' }}
-        run: git reset ${{ github.head_ref }}
+        run: |
+          git reset ${{ github.head_ref }}
+          git --no-pager log -n 20 --oneline
 
       - name: Package Extensions
         run: pnpm package:dry
