--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "start:extension": "ts-node vite.build.ts --watch",
     "start:services": "docker-compose -f docker/docker-compose.yml up --abort-on-container-exit",
     "compile": "vue-tsc --noEmit",
-    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules ./node_modules/.bin/jest --runInBand",
-    "test:watch": "pnpm test --watchAll",
+    "test": "jest --runInBand",
+    "test:watch": "jest --runInBand --watchAll",
     "test:e2e": "echo 'TODO'",
     "lint": "eslint . --ext .ts,.vue --max-warnings 0 --fix",
     "lint:check": "eslint . --ext .js,.ts,.vue --max-warnings 0",
@@ -42,7 +42,6 @@
     "axios": "^0.21.1",
     "axios-auth-refresh": "^3.1.0",
     "fuzzysort": "^1.1.4",
-    "jest-mock-extended": "^2.0.2-beta2",
     "lodash.isequal": "^4.5.0",
     "md5": "^2.3.0",
     "vite-plugin-components": "^0.13.2",
@@ -91,7 +90,8 @@
     "form-data": "^4.0.0",
     "fs-extra": "^10.0.0",
     "husky": "^7.0.1",
-    "jest": "^27.1.1",
+    "jest": "^27.2.2",
+    "jest-mock-extended": "^2.0.4",
     "kolorist": "^1.5.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.3.6",
