--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
   "scripts": {
     "start": "ts-node vite.build.ts --watch --mode test",
     "start:chrome": "pnpm start -- --for chrome",
-    "start:services": "docker-compose -f docker/docker-compose.yml up --abort-on-container-exit",
-    "dev": "concurrently --kill-others-on-fail -n extension,services -c magenta,cyan \"ts-node vite.build.ts --watch\" \"pnpm start:services\"",
-    "dev:chrome": "concurrently --kill-others-on-fail -n extension,services -c magenta,cyan \"ts-node vite.build.ts --watch --for chrome\" \"pnpm start:services\"",
+    "dev": "concurrently --kill-others-on-fail -n extension,services -c magenta,cyan \"pnpm dev:extension\" \"pnpm dev:services\"",
+    "dev:extension": "ts-node vite.build.ts --watch",
+    "dev:chrome": "concurrently --kill-others-on-fail -n extension,services -c magenta,cyan \"pnpm dev:extension -- --for chrome\" \"pnpm dev:services\"",
+    "dev:services": "docker-compose -f docker/docker-compose.yml up --abort-on-container-exit",
     "compile": "vue-tsc --noEmit",
     "test": "jest --runInBand",
     "test:watch": "jest --runInBand --watchAll",
@@ -26,7 +27,7 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "clean": "rimraf extension/popup extension/options extension/content-scripts extension/background extension/manifest.json",
-    "clean:services": "npm run start:services -V",
+    "clean:services": "npm run dev:services -V",
     "build": "ts-node vite.build.ts --mode prod --for firefox",
     "build:chrome": "ts-node vite.build.ts --mode prod --for chrome",
     "build:beta": "ts-node vite.build.ts --mode beta --for firefox",
